--- a/lab.ipynb
+++ b/lab.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From C:\\Users\\PRABAL YADAV\\Desktop\\machine learning iim\\venv\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "WARNING:tensorflow:From C:\\Users\\PRABAL YADAV\\Desktop\\machine learning iim\\venv\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. lease use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
       "\n",
       "Total number of videos in train dataset: 434\n",
       "Total number of videos in val dataset: 108\n",
